text.txt
NURDVision3.0.cpp: In function ‘void hslThreshold(cv::Mat&, const double*, const double*, const double*, cv::Mat&)’:
NURDVision3.0.cpp:38:39: error: call of overloaded ‘cvtColor(cv::Mat&, cv::Mat&, cv::ColorConversionCodes)’ is ambiguous
  cvtColor(input, output, COLOR_BGR2HLS);
                                       ^
NURDVision3.0.cpp:38:39: note: candidates are:
In file included from /usr/local/include/opencv2/videostab/global_motion.hpp:56:0,
                 from /usr/local/include/opencv2/videostab/stabilizer.hpp:50,
                 from /usr/local/include/opencv2/videostab.hpp:78,
                 from /usr/local/include/opencv2/opencv.hpp:98,
                 from NURDVision3.0.cpp:6:
/usr/local/include/opencv2/cudaimgproc.hpp:90:17: note: void cv::cuda::cvtColor(cv::InputArray, cv::OutputArray, int, int, cv::cuda::Stream&)
 CV_EXPORTS void cvtColor(InputArray src, OutputArray dst, int code, int dcn = 0, Stream& stream = Stream::Null());
                 ^
In file included from /usr/local/include/opencv2/opencv.hpp:71:0,
                 from NURDVision3.0.cpp:6:
/usr/local/include/opencv2/imgproc.hpp:3571:19: note: void cv::cvtColor(cv::InputArray, cv::OutputArray, int, int)
 CV_EXPORTS_W void cvtColor( InputArray src, OutputArray dst, int code, int dstCn = 0 );
                   ^
NURDVision3.0.cpp: In function ‘void createMask(cv::Mat&, cv::Mat&, cv::Mat&)’:
NURDVision3.0.cpp:45:36: error: call of overloaded ‘bitwise_xor(cv::Mat&, cv::Mat&, cv::Mat&)’ is ambiguous
  bitwise_xor(output, output, output);
                                    ^
NURDVision3.0.cpp:45:36: note: candidates are:
In file included from /usr/local/include/opencv2/opencv.hpp:106:0,
                 from NURDVision3.0.cpp:6:
/usr/local/include/opencv2/cudaarithm.hpp:266:17: note: void cv::cuda::bitwise_xor(cv::InputArray, cv::InputArray, cv::OutputArray, cv::InputArray, cv::cuda::Stream&)
 CV_EXPORTS void bitwise_xor(InputArray src1, InputArray src2, OutputArray dst, InputArray mask = noArray(), Stream& stream = Stream::Null());
                 ^
In file included from /usr/local/include/opencv2/opencv.hpp:52:0,
                 from NURDVision3.0.cpp:6:
/usr/local/include/opencv2/core.hpp:1274:19: note: void cv::bitwise_xor(cv::InputArray, cv::InputArray, cv::OutputArray, cv::InputArray)
 CV_EXPORTS_W void bitwise_xor(InputArray src1, InputArray src2,
                   ^
NURDVision3.0.cpp: In function ‘void createContours(cv::Mat&, std::vector<std::vector<cv::Point_<int> > >&)’:
NURDVision3.0.cpp:69:36: error: call of overloaded ‘cvtColor(cv::Mat&, cv::Mat&, <anonymous enum>)’ is ambiguous
  cvtColor(input, input, CV_RGB2GRAY);
                                    ^
NURDVision3.0.cpp:69:36: note: candidates are:
In file included from /usr/local/include/opencv2/videostab/global_motion.hpp:56:0,
                 from /usr/local/include/opencv2/videostab/stabilizer.hpp:50,
                 from /usr/local/include/opencv2/videostab.hpp:78,
                 from /usr/local/include/opencv2/opencv.hpp:98,
                 from NURDVision3.0.cpp:6:
/usr/local/include/opencv2/cudaimgproc.hpp:90:17: note: void cv::cuda::cvtColor(cv::InputArray, cv::OutputArray, int, int, cv::cuda::Stream&)
 CV_EXPORTS void cvtColor(InputArray src, OutputArray dst, int code, int dcn = 0, Stream& stream = Stream::Null());
                 ^
In file included from /usr/local/include/opencv2/opencv.hpp:71:0,
                 from NURDVision3.0.cpp:6:
/usr/local/include/opencv2/imgproc.hpp:3571:19: note: void cv::cvtColor(cv::InputArray, cv::OutputArray, int, int)
 CV_EXPORTS_W void cvtColor( InputArray src, OutputArray dst, int code, int dstCn = 0 );
                   ^
ubuntu@tegra-ubuntu:~/Desktop$ 
